--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="static/client.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
